[gd_scene load_steps=5 format=3 uid="uid://dp1vo74r3a1lr"]

[ext_resource type="Script" uid="uid://intnes2u7rh4" path="res://scripts/high_scores.gd" id="1_3582i"]
[ext_resource type="FontFile" uid="uid://d1nvsr7k5awjy" path="res://assets/fonts/Monoton-Regular.ttf" id="1_jirj5"]
[ext_resource type="PackedScene" uid="uid://cnj2nmt8lbe3k" path="res://scenes/popup_handler.tscn" id="3_1o3qf"]

[sub_resource type="Shortcut" id="Shortcut_3582i"]
events = [null]

[node name="HighScores" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3582i")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/Panel/PanelContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/Panel/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/Panel/PanelContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 20
columns = 3

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut = SubResource("Shortcut_3582i")
text = "X"

[node name="PopupHandler" parent="." node_paths=PackedStringArray("initial_focus_element") instance=ExtResource("3_1o3qf")]
unique_name_in_owner = true
initial_focus_element = NodePath("../PanelContainer/MarginContainer/CloseButton")

[node name="TemplateContainer" type="Node" parent="."]

[node name="TemplatePositionLabel" type="Label" parent="TemplateContainer"]
unique_name_in_owner = true
visible = false
offset_left = 640.0
offset_top = 100.0
offset_right = 698.0
offset_bottom = 165.0
size_flags_horizontal = 3
theme_type_variation = &"ScoreRowLabel"
text = "1."

[node name="TemplateScoreLabel" type="Label" parent="TemplateContainer"]
unique_name_in_owner = true
visible = false
offset_left = 640.0
offset_top = 100.0
offset_right = 755.0
offset_bottom = 165.0
size_flags_horizontal = 3
theme_type_variation = &"ScoreRowLabel"
text = "9999"
horizontal_alignment = 1

[node name="TemplateUsernameLabel" type="Label" parent="TemplateContainer"]
unique_name_in_owner = true
visible = false
offset_left = 640.0
offset_top = 100.0
offset_right = 767.0
offset_bottom = 176.0
size_flags_horizontal = 3
theme_type_variation = &"ScoreRowLabel"
theme_override_fonts/font = ExtResource("1_jirj5")
text = "ABC"
horizontal_alignment = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
